# camera-gui

./: .gitignore  README.md  meson.build
include/: CameraBuffers.hpp  CameraPreview.hpp  CameraPreview_alt.hpp  EGLBuffers.hpp  EGLBuffersMinimal.hpp  EGLErrors.hpp  EglBuffers.hpp  GetStreamData.hpp  SDLHandler.hpp  ShaderUtils.hpp  SharedContext.hpp  StreamDataHandler.hpp  microui.h  renderer.h
include/glad/: glad.h
shaders/: gles2shader.frag  gles2shader.vert  gles2shaderoes.frag  gles2shaders2d.frag  shader.frag  shader.vert  shaderoes.frag
src/: CameraBuffers.cpp  CameraPreview.cpp  CameraPreview_alt.cpp  EGLBuffers.cpp  EGLBuffersMinimal.cpp  EglBuffers.cpp  GetStreamData.cpp  SDLHandler.cpp  ShaderUtils.cpp  SharedContext.cpp  StreamDataHandler.cpp  glad.c  gles31renderer.c  main.cpp  main_alt.cpp  main_microui.cpp  main_microui_demo.cpp  renderer.c
